VUFIND-1342 Restructure project to modernize layout
  * Move all files to sit under packages:

      - org.vufind.util
      - org.vufind.solr.handler
      - org.vufind.solr.indexing

  * Remove unused clojure jar (a previous test suite used this, but
    it's gone)

  * Remove unused build targets from build.xml